Body parser test

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 {
   "FIREBASE_ENDPOINT": "https://chapmanu-data.firebaseio.com/",
   "FIREBASE_SECRET": "LtYkysnNuwRFF6Ehz3cA9FpLHXiQAlZi3OTHKZ6A",
-  "PARKING_ENDPOINT": "https://webfarm.chapman.edu/parkingservice/parkingservice/counts"
+  "PARKING_ENDPOINT": "https://webfarm.chapman.edu/parkingservice/parkingservice/counts",
+  "KIMONOLABS_API_KEY": "uGxAuyh37GqKQeFT7lsZyvEcU5KYM4mZ",
+  "KIMONOLABS_ENDPOINT": "https://www.kimonolabs.com/api/",
+  "JOBS_STUDENTS_API": "3fpex2mg"
 }
