Scraping all jobs

--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@
   "PARKING_ENDPOINT": "https://webfarm.chapman.edu/parkingservice/parkingservice/counts",
   "KIMONOLABS_API_KEY": "uGxAuyh37GqKQeFT7lsZyvEcU5KYM4mZ",
   "KIMONOLABS_ENDPOINT": "https://www.kimonolabs.com/api/",
-  "JOBS_STUDENTS_API": "3fpex2mg"
+  "JOBS_STUDENTS_API": "3fpex2mg",
+  "JOBS_STAFF_API": "8qsd3l10",
+  "JOBS_FACULTY_API": "61rkgxwk"
 }
