--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.10.4",
     "firebase": "^2.0.5",
     "lodash": "^2.4.1",
+    "rsvp": "^3.0.14",
     "unirest": "^0.3.0"
   }
 }
