--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@
   "KIMONOLABS_ENDPOINT": "https://www.kimonolabs.com/api/",
   "JOBS_STUDENTS_API": "3fpex2mg",
   "JOBS_STAFF_API": "8qsd3l10",
-  "JOBS_FACULTY_API": "61rkgxwk"
+  "JOBS_FACULTY_API": "61rkgxwk",
+  "WEATHER_ENDPOINT": "http://forecast.chapman.edu/chapman/banner-json.php"
 }
