Switched to more robust weather parser

--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@
   "JOBS_STUDENTS_API": "3fpex2mg",
   "JOBS_STAFF_API": "8qsd3l10",
   "JOBS_FACULTY_API": "61rkgxwk",
-  "WEATHER_ENDPOINT": "http://forecast.chapman.edu/chapman/banner-json.php"
+  "WEATHER_ENDPOINT": "http://forecast.chapman.edu/chapman/banner-json.php",
+  "WEATHER_API": "5vfpjwlw"
 }
