Added social endpoint

--- a/.env
+++ b/.env
@@ -8,5 +8,6 @@
   "JOBS_STAFF_API": "8qsd3l10",
   "JOBS_FACULTY_API": "61rkgxwk",
   "WEATHER_ENDPOINT": "http://forecast.chapman.edu/chapman/banner-json.php",
-  "WEATHER_API": "5vfpjwlw"
+  "WEATHER_API": "5vfpjwlw",
+  "SOCIAL_ENDPOINT": "https://social.chapman.edu/posts.json"
 }
