--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "ember-moment": "^1.0.0",
     "express": "^4.8.5",
     "fireplace": "^0.2.9",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "grunt": "^0.4.5",
+    "grunt-exec": "^0.4.6",
+    "grunt-gh-pages": "^0.9.1"
   }
 }
